--- a/PictureBaiTap/PictureBaiTap.csproj
+++ b/PictureBaiTap/PictureBaiTap.csproj
@@ -52,10 +52,19 @@
     <Compile Include="FrmCopyPicture.Designer.cs">
       <DependentUpon>FrmCopyPicture.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmThongTin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmThongTin.Designer.cs">
+      <DependentUpon>FrmThongTin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmCopyPicture.resx">
       <DependentUpon>FrmCopyPicture.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmThongTin.resx">
+      <DependentUpon>FrmThongTin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
